fix select collapse animate

--- a/src/scss/mixins/_select.scss
+++ b/src/scss/mixins/_select.scss
@@ -33,9 +33,6 @@
   display: inline-block;
   border-top: 2px solid $color;
   border-right: 2px solid $color;
-  transform: rotate(135deg);
-  transform-origin: 50% 50%;
-  transition: transform 0.2s ease;
 }
 
 @mixin select-icon-active {
